Compiler/antlr/test_cases/semantic_errors/err8_loop.tiger
main let
    var A : array[16] of int := 10;
    var X : int;
in begin
    X := readi();
    if (X < 0) then
        for X := 0.0 to 15.0 do
            printc(A[X]);
        enddo;
    endif;
end
